deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpstatuscodes
spec:
  selector:
    matchLabels:
      app: httpstatuscodes
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: httpstatuscodes
    spec:
      containers:
      - name: httpstatuscodes
        image: bo0km4n1109/httpstatuscodes:1.0.0
        command:
          - /httpstatuscodes
          - --port=9696
        ports:
        - containerPort: 9696
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpstatuscodes
  name: httpstatuscodes
spec:
  ports:
  - port: 9696
    targetPort: 9696
  selector:
    app: httpstatuscodes
  type: NodePort
