ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: httpstatuscodes-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: statuscodes.info
    http:
      paths:
      - path: /.*
        backend:
          serviceName: httpstatuscodes
          servicePort: 9696
